gui: Tune heap size
This should be enough for the application: Beside the dictionary words,
most of the objects are short-lived and created by the solver.