@@ -33,10 +33,19 @@ dependencies {
 
 tasks.named<JavaExec>("run") {
     jvmArgs = listOf(
-        // Useful debug options
+        // Memory tuning
+        "-Xms256M",                     // initial heap size
+        "-Xmx512M",                     // maximum heap size
+
+        // Useful Java debug options
+        //"-XX:+PrintCommandLineFlags",
+        //"-Xlog:gc",                   // print garbage collection events
+
+        // Useful JavaFx debug options
         //"-Dprism.order=sw",           // force sw rendering
         //"-Dprism.verbose=true",       // print rendering pipeline info on startup
         //"-Dprism.showdirty=true",     // show dirty regions
-        //"-Djavafx.pulseLogger=true"   // display pulse event information
+        //"-Djavafx.pulseLogger=true"   // display pulse event information (buggy, JDK-8149490)
+        //"-Dsun.awt.disablegrab=true"  // allow breakpoints on JavaFx application thread
     )
 }
